<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".ForgotPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline3"
        android:layout_centerInParent="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_my_password"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_worries_your_password_will_be_recovered"
            android:textColor="@color/purple_200"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/forgotpassword"
        android:hint="@string/enter_your_registered_email"
        android:layout_marginBottom="10dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_recover"
        android:id="@+id/password_recover_button"
        android:layout_below="@id/centerline3"
        android:backgroundTint="@color/purple_200"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back_to_login_screen"
        android:textColor="@color/white"
        android:id="@+id/go_back_to_login"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textAlignment="center"/>
</RelativeLayout>